Bug 255718 [publisher] Consume BundleInfo data from product file