@@ -1,12 +1,11 @@
 /*******************************************************************************
- * Copyright (c) 2008 Code 9 and others. All rights reserved. This
+ * Copyright (c) 2008 IBM Corporation and others. All rights reserved. This
  * program and the accompanying materials are made available under the terms of
  * the Eclipse Public License v1.0 which accompanies this distribution, and is
  * available at http://www.eclipse.org/legal/epl-v10.html
  * 
  * Contributors: 
- *   Code 9 - initial API and implementation
- *   IBM - ongoing development
+ *   IBM - initial API and implementation
  ******************************************************************************/
 package org.eclipse.equinox.p2.tests.publisher.actions;
 
@@ -17,21 +16,23 @@ import java.io.IOException;
 import java.util.Collections;
 import org.easymock.Capture;
 import org.easymock.EasyMock;
-import org.eclipse.equinox.internal.provisional.frameworkadmin.BundleInfo;
+import org.eclipse.equinox.p2.publisher.AbstractPublisherAction;
 import org.eclipse.equinox.p2.publisher.IPublisherInfo;
 import org.eclipse.equinox.p2.publisher.actions.RootIUAdvice;
 import org.eclipse.equinox.p2.publisher.eclipse.*;
 import org.eclipse.equinox.p2.tests.TestData;
 import org.osgi.framework.Version;
 
+/**
+ * Tests for {@link ProductAction} specific to Mac.
+ */
 @SuppressWarnings( {"unchecked"})
-public class ProductActionTest extends ActionTest {
+public class ProductActionTestMac extends ActionTest {
 
-	File executablesFeatureLocation = null;
-	String productLocation = "";
+	private File executablesFeatureLocation = null;
 	private Capture<RootIUAdvice> rootIUAdviceCapture;
 	private Capture<ProductFileAdvice> productFileAdviceCapture;
-	String source = "";
+	private String source = "";
 
 	@Override
 	protected IPublisherInfo createPublisherInfoMock() {
@@ -48,32 +49,11 @@ public class ProductActionTest extends ActionTest {
 	}
 
 	public void setUp() throws Exception {
+		configSpec = AbstractPublisherAction.createConfigSpec("carbon", "macosx", "x86");
 		rootIUAdviceCapture = new Capture<RootIUAdvice>();
 		productFileAdviceCapture = new Capture<ProductFileAdvice>();
 		setupPublisherInfo();
 		setupPublisherResult();
-	}
-
-	/**
-	 * Tests that a product file containing bundle configuration data produces appropriate 
-	 * IConfigAdvice (start levels, auto-start).
-	 */
-	public void testSetBundleConfigData() throws Exception {
-		testAction = new ProductAction(source, TestData.getFile("ProductActionTest", "startLevel.product").toString(), flavorArg, executablesFeatureLocation);
-
-		testAction.perform(publisherInfo, publisherResult, null);
-		IConfigAdvice configAdvice = productFileAdviceCapture.getValue();
-		BundleInfo[] bundles = configAdvice.getBundles();
-		assertEquals("1.0", 2, bundles.length);
-		assertEquals("1.1", "org.eclipse.equinox.common", bundles[0].getSymbolicName());
-		assertEquals("1.2", "1.0.0", bundles[0].getVersion());
-		assertEquals("1.3", 13, bundles[0].getStartLevel());
-		assertEquals("1.4", false, bundles[0].isMarkedAsStarted());
-
-		assertEquals("2.1", "org.eclipse.core.runtime", bundles[1].getSymbolicName());
-		assertEquals("2.2", "2.0.0", bundles[1].getVersion());
-		assertEquals("2.3", 6, bundles[1].getStartLevel());
-		assertEquals("2.4", true, bundles[1].isMarkedAsStarted());
 	}
 
 	/**
@@ -87,10 +67,17 @@ public class ProductActionTest extends ActionTest {
 		assertEquals("1.0", "eclipse", launchAdvice.getExecutableName());
 
 		String[] programArgs = launchAdvice.getProgramArguments();
-		assertEquals("2.0", 0, programArgs.length);
+		assertEquals("2.0", 2, programArgs.length);
+		assertEquals("2.1", "-showsplash", programArgs[0]);
+		assertEquals("2.2", "org.eclipse.platform", programArgs[1]);
 
 		String[] vmArgs = launchAdvice.getVMArguments();
-		assertEquals("3.0", 0, vmArgs.length);
-
+		assertEquals("3.0", 6, vmArgs.length);
+		assertEquals("3.1", "-Xdock:icon=../Resources/Eclipse.icns", vmArgs[0]);
+		assertEquals("3.2", "-XstartOnFirstThread", vmArgs[1]);
+		assertEquals("3.3", "-Xms40m", vmArgs[2]);
+		assertEquals("3.4", "-Xmx256m", vmArgs[3]);
+		assertEquals("3.5", "-XX:MaxPermSize=256m", vmArgs[4]);
+		assertEquals("3.6", "-Dorg.eclipse.swt.internal.carbon.smallFonts", vmArgs[5]);
 	}
 }
